# jreq

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  jreq.rst  modules.rst
jreq/: __init__.py  jreq.py
