[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jreq"
description = "JSON Requests"
readme = "README.md"
requires-python = ">=3.6.9"
#keywords = ["yandex", "yandex-oauth", "yandex-api", "yandex-oauth-api"]
license = {text = "MIT"}
classifiers = [
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python',
]
dependencies = [
    'requests',
]
authors = [
    {name = "Igor Kuptsov", email = "ya360@uh.net.ru"},
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "jreq/_version.py"

[tool.setuptools.dynamic]
version = {attr = "jreq/_version.__version__"}

[project.urls]
"Bug Tracker" = "https://github.com/imercury13/jreq/issues"
"Documentation" = "https://jreq.readthedocs.io/"
"Download" = "https://github.com/imercury13/jreq"